--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,7 @@
 =========== Week 21 (2022) ===========
+Sat May 28:
+	* minor bug fixes: raycasting infinite loop, MT chunk loading, invalid free argument.
+
 Wed May 25:
 	* raycasting integrated, using CPU only for now.
 
